Add particle system: SD-Turbo image gen + ESP32 particle firmware
Server changes:
- image_gen.py: SD-Turbo (1-step diffusion) image generation module
  - Loads model into VRAM at startup, generates 128x128 RGB images
  - Falls back to segmind/small-sd if VRAM is tight
  - Async generate_image() returns raw RGB pixel bytes
- screen_engine.py: Complete rewrite for particle system
  - Maps emotional state (valence/arousal/certainty/mode) to particle physics
  - Sends particles, mood, and clear messages over WebSocket
  - Supports idle ambient image generation cycle
- tool_executor.py: Added generate_visual tool for Ada to create images
- ada_brain.py: Updated system prompt with particle/visual instructions
- ada_server.py: Initializes image_gen at startup, cleanup on shutdown
- config.py: Added IMAGE_GEN_* settings
- requirements.txt: Added diffusers, transformers, accelerate, safetensors

Firmware (ESP32-S3):
- ada_particles.ino: Main sketch with WiFi, WebSocket, 30fps render loop
- particle_system.h: Full particle physics engine
  - Float, drift, swirl_inward, pulse_outward animations
  - Smooth morphing between images (no snapping)
  - Config lerping for seamless emotional transitions
  - PSRAM allocation for 1500 particles
- base64_decode.h: Fast LUT-based base64 decoder
- config.h: Pin definitions, network config, physics defaults

This is Ada's body — images become living particle clouds.

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -16,3 +16,10 @@ numpy>=1.26.0         # audio buffer manipulation
 
 # Utilities
 pydantic>=2.5.0       # data validation
+
+# Image generation (SD-Turbo)
+diffusers>=0.27.0
+transformers>=4.38.0
+accelerate>=0.27.0
+safetensors>=0.4.0
+torch>=2.2.0          # CUDA support required
